gensrc/com/redhat/ceylon/compiler/typechecker/treegen/PsiImplGenParser.java
// $ANTLR 3.4 grammar/PsiImplGen.g 2017-01-24 18:07:50
 
    package com.redhat.ceylon.compiler.typechecker.treegen;
    import static com.redhat.ceylon.compiler.typechecker.treegen.Util.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class PsiImplGenParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CARAT", "DESCRIPTION", "EXTENDS", "FIELD_NAME", "LPAREN", "MANY", "NODE_NAME", "OPTIONAL", "RPAREN", "SEMI", "TYPE_NAME", "WS", "'*'", "'<'", "'>'", "'abstract'", "'boolean'", "'string'"
    };

    public static final int EOF=-1;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int CARAT=4;
    public static final int DESCRIPTION=5;
    public static final int EXTENDS=6;
    public static final int FIELD_NAME=7;
    public static final int LPAREN=8;
    public static final int MANY=9;
    public static final int NODE_NAME=10;
    public static final int OPTIONAL=11;
    public static final int RPAREN=12;
    public static final int SEMI=13;
    public static final int TYPE_NAME=14;
    public static final int WS=15;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public PsiImplGenParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public PsiImplGenParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return PsiImplGenParser.tokenNames; }
    public String getGrammarFileName() { return "grammar/PsiImplGen.g"; }



    // $ANTLR start "nodeList"
    // grammar/PsiImplGen.g:11:1: nodeList : ( ( nodeDescription )? node )+ EOF ;
    public final void nodeList() throws RecognitionException {
        try {
            // grammar/PsiImplGen.g:11:10: ( ( ( nodeDescription )? node )+ EOF )
            // grammar/PsiImplGen.g:11:12: ( ( nodeDescription )? node )+ EOF
            {
             
                       println("package org.intellij.plugins.ceylon.ide.psi;\n");
                       println("import com.intellij.lang.ASTNode;");
                       println("import com.redhat.ceylon.compiler.typechecker.tree.Tree;");
                       println("import com.redhat.ceylon.compiler.typechecker.tree.CustomTree;");
                       println("import org.intellij.plugins.ceylon.ide.resolve.*;");
                       println("import org.intellij.plugins.ceylon.ide.psi.impl.*;");
                       println("/* Generated using Antlr by PsiImplGen.g */");
                       println("\npublic class CeylonPsiImpl {\n");
                       println("    public static class GuardedVariablePsiImpl extends CeylonCompositeElementImpl");
                       println("            implements CeylonPsi.GuardedVariablePsi {");
                       println("        public GuardedVariablePsiImpl(ASTNode astNode) { super(astNode); }");
                       println("        @Override public CustomTree.GuardedVariable getCeylonNode() { return (CustomTree.GuardedVariable) super.getCeylonNode(); }");
                       println("    }");
                       

            // grammar/PsiImplGen.g:26:12: ( ( nodeDescription )? node )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0 >= CARAT && LA2_0 <= DESCRIPTION)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // grammar/PsiImplGen.g:26:13: ( nodeDescription )? node
            	    {
            	    // grammar/PsiImplGen.g:26:13: ( nodeDescription )?
            	    int alt1=2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0==DESCRIPTION) ) {
            	        alt1=1;
            	    }
            	    switch (alt1) {
            	        case 1 :
            	            // grammar/PsiImplGen.g:26:13: nodeDescription
            	            {
            	            pushFollow(FOLLOW_nodeDescription_in_nodeList41);
            	            nodeDescription();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_node_in_nodeList44);
            	    node();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            match(input,EOF,FOLLOW_EOF_in_nodeList60); 

             println("}"); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "nodeList"



    // $ANTLR start "node"
    // grammar/PsiImplGen.g:31:1: node : '^' '(' ( 'abstract' )? n= NODE_NAME ({...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) | ( extendsNode ) ) ( ( memberDescription )? subnode )* ( ( memberDescription )? field )* ')' ;
    public final void node() throws RecognitionException {
        Token n=null;

        try {
            // grammar/PsiImplGen.g:31:6: ( '^' '(' ( 'abstract' )? n= NODE_NAME ({...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) | ( extendsNode ) ) ( ( memberDescription )? subnode )* ( ( memberDescription )? field )* ')' )
            // grammar/PsiImplGen.g:31:8: '^' '(' ( 'abstract' )? n= NODE_NAME ({...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) | ( extendsNode ) ) ( ( memberDescription )? subnode )* ( ( memberDescription )? field )* ')'
            {
            match(input,CARAT,FOLLOW_CARAT_in_node93); 

            match(input,LPAREN,FOLLOW_LPAREN_in_node95); 

             print("    public static "); 

            // grammar/PsiImplGen.g:33:8: ( 'abstract' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==19) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // grammar/PsiImplGen.g:33:9: 'abstract'
                    {
                    match(input,19,FOLLOW_19_in_node115); 

                     print("abstract "); 

                    }
                    break;

            }


             print("class "); 

            n=(Token)match(input,NODE_NAME,FOLLOW_NODE_NAME_in_node155); 

            // grammar/PsiImplGen.g:38:8: ({...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) |{...}? => ( ( ':' NODE_NAME )? ) | ( extendsNode ) )
            int alt9=6;
            switch ( input.LA(1) ) {
            case EXTENDS:
                {
                int LA9_1 = input.LA(2);

                if ( (LA9_1==NODE_NAME) ) {
                    int LA9_9 = input.LA(3);

                    if ( (( (n!=null?n.getText():null).equals("BASE_MEMBER_EXPRESSION") )) ) {
                        alt9=1;
                    }
                    else if ( (( (n!=null?n.getText():null).equals("IDENTIFIER") )) ) {
                        alt9=2;
                    }
                    else if ( (( (n!=null?n.getText():null).equals("LOCAL_MODIFIER") )) ) {
                        alt9=3;
                    }
                    else if ( (( (n!=null?n.getText():null).equals("STRING_LITERAL") )) ) {
                        alt9=4;
                    }
                    else if ( (( (n!=null?n.getText():null).equals("MODULE_DESCRIPTOR") || (n!=null?n.getText():null).equals("PACKAGE_DESCRIPTOR") )) ) {
                        alt9=5;
                    }
                    else if ( (true) ) {
                        alt9=6;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 9, 9, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 1, input);

                    throw nvae;

                }
                }
                break;
            case DESCRIPTION:
                {
                int LA9_2 = input.LA(2);

                if ( (( (n!=null?n.getText():null).equals("BASE_MEMBER_EXPRESSION") )) ) {
                    alt9=1;
                }
                else if ( (( (n!=null?n.getText():null).equals("IDENTIFIER") )) ) {
                    alt9=2;
                }
                else if ( (( (n!=null?n.getText():null).equals("LOCAL_MODIFIER") )) ) {
                    alt9=3;
                }
                else if ( (( (n!=null?n.getText():null).equals("STRING_LITERAL") )) ) {
                    alt9=4;
                }
                else if ( (( (n!=null?n.getText():null).equals("MODULE_DESCRIPTOR") || (n!=null?n.getText():null).equals("PACKAGE_DESCRIPTOR") )) ) {
                    alt9=5;
                }
                else if ( (true) ) {
                    alt9=6;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 2, input);

                    throw nvae;

                }
                }
                break;
            case NODE_NAME:
                {
                int LA9_3 = input.LA(2);

                if ( (( (n!=null?n.getText():null).equals("BASE_MEMBER_EXPRESSION") )) ) {
                    alt9=1;
                }
                else if ( (( (n!=null?n.getText():null).equals("IDENTIFIER") )) ) {
                    alt9=2;
                }
                else if ( (( (n!=null?n.getText():null).equals("LOCAL_MODIFIER") )) ) {
                    alt9=3;
                }
                else if ( (( (n!=null?n.getText():null).equals("STRING_LITERAL") )) ) {
                    alt9=4;
                }
                else if ( (( (n!=null?n.getText():null).equals("MODULE_DESCRIPTOR") || (n!=null?n.getText():null).equals("PACKAGE_DESCRIPTOR") )) ) {
                    alt9=5;
                }
                else if ( (true) ) {
                    alt9=6;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 3, input);

                    throw nvae;

                }
                }
                break;
            case TYPE_NAME:
                {
                int LA9_4 = input.LA(2);

                if ( (( (n!=null?n.getText():null).equals("BASE_MEMBER_EXPRESSION") )) ) {
                    alt9=1;
                }
                else if ( (( (n!=null?n.getText():null).equals("IDENTIFIER") )) ) {
                    alt9=2;
                }
                else if ( (( (n!=null?n.getText():null).equals("LOCAL_MODIFIER") )) ) {
                    alt9=3;
                }
                else if ( (( (n!=null?n.getText():null).equals("STRING_LITERAL") )) ) {
                    alt9=4;
                }
                else if ( (( (n!=null?n.getText():null).equals("MODULE_DESCRIPTOR") || (n!=null?n.getText():null).equals("PACKAGE_DESCRIPTOR") )) ) {
                    alt9=5;
                }
                else if ( (true) ) {
                    alt9=6;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 4, input);

                    throw nvae;

                }
                }
                break;
            case 20:
                {
                int LA9_5 = input.LA(2);

                if ( (( (n!=null?n.getText():null).equals("BASE_MEMBER_EXPRESSION") )) ) {
                    alt9=1;
                }
                else if ( (( (n!=null?n.getText():null).equals("IDENTIFIER") )) ) {
                    alt9=2;
                }
                else if ( (( (n!=null?n.getText():null).equals("LOCAL_MODIFIER") )) ) {
                    alt9=3;
                }
                else if ( (( (n!=null?n.getText():null).equals("STRING_LITERAL") )) ) {
                    alt9=4;
                }
                else if ( (( (n!=null?n.getText():null).equals("MODULE_DESCRIPTOR") || (n!=null?n.getText():null).equals("PACKAGE_DESCRIPTOR") )) ) {
                    alt9=5;
                }
                else if ( (true) ) {
                    alt9=6;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 5, input);

                    throw nvae;

                }
                }
                break;
            case 21:
                {
                int LA9_6 = input.LA(2);

                if ( (( (n!=null?n.getText():null).equals("BASE_MEMBER_EXPRESSION") )) ) {
                    alt9=1;
                }
                else if ( (( (n!=null?n.getText():null).equals("IDENTIFIER") )) ) {
                    alt9=2;
                }
                else if ( (( (n!=null?n.getText():null).equals("LOCAL_MODIFIER") )) ) {
                    alt9=3;
                }
                else if ( (( (n!=null?n.getText():null).equals("STRING_LITERAL") )) ) {
                    alt9=4;
                }
                else if ( (( (n!=null?n.getText():null).equals("MODULE_DESCRIPTOR") || (n!=null?n.getText():null).equals("PACKAGE_DESCRIPTOR") )) ) {
                    alt9=5;
                }
                else if ( (true) ) {
                    alt9=6;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 6, input);

                    throw nvae;

                }
                }
                break;
            case 19:
                {
                int LA9_7 = input.LA(2);

                if ( (( (n!=null?n.getText():null).equals("BASE_MEMBER_EXPRESSION") )) ) {
                    alt9=1;
                }
                else if ( (( (n!=null?n.getText():null).equals("IDENTIFIER") )) ) {
                    alt9=2;
                }
                else if ( (( (n!=null?n.getText():null).equals("LOCAL_MODIFIER") )) ) {
                    alt9=3;
                }
                else if ( (( (n!=null?n.getText():null).equals("STRING_LITERAL") )) ) {
                    alt9=4;
                }
                else if ( (( (n!=null?n.getText():null).equals("MODULE_DESCRIPTOR") || (n!=null?n.getText():null).equals("PACKAGE_DESCRIPTOR") )) ) {
                    alt9=5;
                }
                else if ( (true) ) {
                    alt9=6;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 7, input);

                    throw nvae;

                }
                }
                break;
            case RPAREN:
                {
                int LA9_8 = input.LA(2);

                if ( (( (n!=null?n.getText():null).equals("BASE_MEMBER_EXPRESSION") )) ) {
                    alt9=1;
                }
                else if ( (( (n!=null?n.getText():null).equals("IDENTIFIER") )) ) {
                    alt9=2;
                }
                else if ( (( (n!=null?n.getText():null).equals("LOCAL_MODIFIER") )) ) {
                    alt9=3;
                }
                else if ( (( (n!=null?n.getText():null).equals("STRING_LITERAL") )) ) {
                    alt9=4;
                }
                else if ( (( (n!=null?n.getText():null).equals("MODULE_DESCRIPTOR") || (n!=null?n.getText():null).equals("PACKAGE_DESCRIPTOR") )) ) {
                    alt9=5;
                }
                else if ( (true) ) {
                    alt9=6;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 8, input);

                    throw nvae;

                }
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;

            }

            switch (alt9) {
                case 1 :
                    // grammar/PsiImplGen.g:39:12: {...}? => ( ( ':' NODE_NAME )? )
                    {
                    if ( !(( (n!=null?n.getText():null).equals("BASE_MEMBER_EXPRESSION") )) ) {
                        throw new FailedPredicateException(input, "node", " $n.text.equals(\"BASE_MEMBER_EXPRESSION\") ");
                    }

                    // grammar/PsiImplGen.g:39:60: ( ( ':' NODE_NAME )? )
                    // grammar/PsiImplGen.g:40:14: ( ':' NODE_NAME )?
                    {
                     print("BaseMemberExpressionPsiImpl extends IdentifiableBaseMemberExpression"); 

                    // grammar/PsiImplGen.g:41:14: ( ':' NODE_NAME )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==EXTENDS) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // grammar/PsiImplGen.g:41:15: ':' NODE_NAME
                            {
                            match(input,EXTENDS,FOLLOW_EXTENDS_in_node211); 

                            match(input,NODE_NAME,FOLLOW_NODE_NAME_in_node213); 

                            }
                            break;

                    }


                    }


                    }
                    break;
                case 2 :
                    // grammar/PsiImplGen.g:44:12: {...}? => ( ( ':' NODE_NAME )? )
                    {
                    if ( !(( (n!=null?n.getText():null).equals("IDENTIFIER") )) ) {
                        throw new FailedPredicateException(input, "node", " $n.text.equals(\"IDENTIFIER\") ");
                    }

                    // grammar/PsiImplGen.g:44:48: ( ( ':' NODE_NAME )? )
                    // grammar/PsiImplGen.g:45:14: ( ':' NODE_NAME )?
                    {
                     print("IdentifierPsiImpl extends ResolvableIdentifier"); 

                    // grammar/PsiImplGen.g:46:14: ( ':' NODE_NAME )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==EXTENDS) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // grammar/PsiImplGen.g:46:15: ':' NODE_NAME
                            {
                            match(input,EXTENDS,FOLLOW_EXTENDS_in_node288); 

                            match(input,NODE_NAME,FOLLOW_NODE_NAME_in_node290); 

                            }
                            break;

                    }


                    }


                    }
                    break;
                case 3 :
                    // grammar/PsiImplGen.g:49:12: {...}? => ( ( ':' NODE_NAME )? )
                    {
                    if ( !(( (n!=null?n.getText():null).equals("LOCAL_MODIFIER") )) ) {
                        throw new FailedPredicateException(input, "node", " $n.text.equals(\"LOCAL_MODIFIER\") ");
                    }

                    // grammar/PsiImplGen.g:49:52: ( ( ':' NODE_NAME )? )
                    // grammar/PsiImplGen.g:50:14: ( ':' NODE_NAME )?
                    {
                     print("LocalModifierPsiImpl extends ResolvableLocalModifier"); 

                    // grammar/PsiImplGen.g:51:14: ( ':' NODE_NAME )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==EXTENDS) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // grammar/PsiImplGen.g:51:15: ':' NODE_NAME
                            {
                            match(input,EXTENDS,FOLLOW_EXTENDS_in_node365); 

                            match(input,NODE_NAME,FOLLOW_NODE_NAME_in_node367); 

                            }
                            break;

                    }


                    }


                    }
                    break;
                case 4 :
                    // grammar/PsiImplGen.g:54:12: {...}? => ( ( ':' NODE_NAME )? )
                    {
                    if ( !(( (n!=null?n.getText():null).equals("STRING_LITERAL") )) ) {
                        throw new FailedPredicateException(input, "node", " $n.text.equals(\"STRING_LITERAL\") ");
                    }

                    // grammar/PsiImplGen.g:54:52: ( ( ':' NODE_NAME )? )
                    // grammar/PsiImplGen.g:55:14: ( ':' NODE_NAME )?
                    {
                     print("StringLiteralPsiImpl extends CeylonDocResolvable"); 

                    // grammar/PsiImplGen.g:56:14: ( ':' NODE_NAME )?
                    int alt7=2;
                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==EXTENDS) ) {
                        alt7=1;
                    }
                    switch (alt7) {
                        case 1 :
                            // grammar/PsiImplGen.g:56:15: ':' NODE_NAME
                            {
                            match(input,EXTENDS,FOLLOW_EXTENDS_in_node442); 

                            match(input,NODE_NAME,FOLLOW_NODE_NAME_in_node444); 

                            }
                            break;

                    }


                    }


                    }
                    break;
                case 5 :
                    // grammar/PsiImplGen.g:59:12: {...}? => ( ( ':' NODE_NAME )? )
                    {
                    if ( !(( (n!=null?n.getText():null).equals("MODULE_DESCRIPTOR") || (n!=null?n.getText():null).equals("PACKAGE_DESCRIPTOR") )) ) {
                        throw new FailedPredicateException(input, "node", " $n.text.equals(\"MODULE_DESCRIPTOR\") || $n.text.equals(\"PACKAGE_DESCRIPTOR\") ");
                    }

                    // grammar/PsiImplGen.g:59:95: ( ( ':' NODE_NAME )? )
                    // grammar/PsiImplGen.g:60:14: ( ':' NODE_NAME )?
                    {
                     print(className((n!=null?n.getText():null)) + "PsiImpl extends NamedStatementOrArgumentPsi"); 

                    // grammar/PsiImplGen.g:61:14: ( ':' NODE_NAME )?
                    int alt8=2;
                    int LA8_0 = input.LA(1);

                    if ( (LA8_0==EXTENDS) ) {
                        alt8=1;
                    }
                    switch (alt8) {
                        case 1 :
                            // grammar/PsiImplGen.g:61:15: ':' NODE_NAME
                            {
                            match(input,EXTENDS,FOLLOW_EXTENDS_in_node519); 

                            match(input,NODE_NAME,FOLLOW_NODE_NAME_in_node521); 

                            }
                            break;

                    }


                    }


                    }
                    break;
                case 6 :
                    // grammar/PsiImplGen.g:64:12: ( extendsNode )
                    {
                    // grammar/PsiImplGen.g:64:12: ( extendsNode )
                    // grammar/PsiImplGen.g:64:14: extendsNode
                    {
                     print(className((n!=null?n.getText():null)) + "PsiImpl"); 

                    pushFollow(FOLLOW_extendsNode_in_node579);
                    extendsNode();

                    state._fsp--;


                    }


                    }
                    break;

            }


             println("\n            implements CeylonPsi." + className((n!=null?n.getText():null)) + "Psi {"); 

             println("        public " + className((n!=null?n.getText():null)) + "PsiImpl(ASTNode astNode) { super(astNode); }" ); 

             println("        @Override public Tree." + className((n!=null?n.getText():null)) + " getCeylonNode() { return (Tree." + className((n!=null?n.getText():null)) + ") super.getCeylonNode(); }" ); 

            // grammar/PsiImplGen.g:71:8: ( ( memberDescription )? subnode )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==DESCRIPTION) ) {
                    int LA11_1 = input.LA(2);

                    if ( (LA11_1==NODE_NAME) ) {
                        alt11=1;
                    }


                }
                else if ( (LA11_0==NODE_NAME) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // grammar/PsiImplGen.g:71:9: ( memberDescription )? subnode
            	    {
            	    // grammar/PsiImplGen.g:71:9: ( memberDescription )?
            	    int alt10=2;
            	    int LA10_0 = input.LA(1);

            	    if ( (LA10_0==DESCRIPTION) ) {
            	        alt10=1;
            	    }
            	    switch (alt10) {
            	        case 1 :
            	            // grammar/PsiImplGen.g:71:9: memberDescription
            	            {
            	            pushFollow(FOLLOW_memberDescription_in_node638);
            	            memberDescription();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_subnode_in_node641);
            	    subnode();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            // grammar/PsiImplGen.g:72:8: ( ( memberDescription )? field )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==DESCRIPTION||LA13_0==TYPE_NAME||(LA13_0 >= 19 && LA13_0 <= 21)) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // grammar/PsiImplGen.g:72:9: ( memberDescription )? field
            	    {
            	    // grammar/PsiImplGen.g:72:9: ( memberDescription )?
            	    int alt12=2;
            	    int LA12_0 = input.LA(1);

            	    if ( (LA12_0==DESCRIPTION) ) {
            	        alt12=1;
            	    }
            	    switch (alt12) {
            	        case 1 :
            	            // grammar/PsiImplGen.g:72:9: memberDescription
            	            {
            	            pushFollow(FOLLOW_memberDescription_in_node653);
            	            memberDescription();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_field_in_node656);
            	    field();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);


            match(input,RPAREN,FOLLOW_RPAREN_in_node667); 

             println("    }\n"); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "node"



    // $ANTLR start "extendsNode"
    // grammar/PsiImplGen.g:77:1: extendsNode : ( ':' n= NODE_NAME ({...}? => () |{...}? => () |{...}? => () |) |);
    public final void extendsNode() throws RecognitionException {
        Token n=null;

        try {
            // grammar/PsiImplGen.g:77:13: ( ':' n= NODE_NAME ({...}? => () |{...}? => () |{...}? => () |) |)
            int alt15=2;
            int LA15_0 = input.LA(1);

            if ( (LA15_0==EXTENDS) ) {
                alt15=1;
            }
            else if ( (LA15_0==DESCRIPTION||LA15_0==NODE_NAME||LA15_0==RPAREN||LA15_0==TYPE_NAME||(LA15_0 >= 19 && LA15_0 <= 21)) ) {
                alt15=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 15, 0, input);

                throw nvae;

            }
            switch (alt15) {
                case 1 :
                    // grammar/PsiImplGen.g:78:13: ':' n= NODE_NAME ({...}? => () |{...}? => () |{...}? => () |)
                    {
                    match(input,EXTENDS,FOLLOW_EXTENDS_in_extendsNode703); 

                    n=(Token)match(input,NODE_NAME,FOLLOW_NODE_NAME_in_extendsNode707); 

                    // grammar/PsiImplGen.g:78:29: ({...}? => () |{...}? => () |{...}? => () |)
                    int alt14=4;
                    switch ( input.LA(1) ) {
                    case DESCRIPTION:
                        {
                        int LA14_1 = input.LA(2);

                        if ( (( (n!=null?n.getText():null).equals("DECLARATION") )) ) {
                            alt14=1;
                        }
                        else if ( (( (n!=null?n.getText():null).equals("TYPED_ARGUMENT") )) ) {
                            alt14=2;
                        }
                        else if ( (( (n!=null?n.getText():null).equals("PARAMETER") )) ) {
                            alt14=3;
                        }
                        else if ( (true) ) {
                            alt14=4;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 14, 1, input);

                            throw nvae;

                        }
                        }
                        break;
                    case NODE_NAME:
                        {
                        int LA14_2 = input.LA(2);

                        if ( (( (n!=null?n.getText():null).equals("DECLARATION") )) ) {
                            alt14=1;
                        }
                        else if ( (( (n!=null?n.getText():null).equals("TYPED_ARGUMENT") )) ) {
                            alt14=2;
                        }
                        else if ( (( (n!=null?n.getText():null).equals("PARAMETER") )) ) {
                            alt14=3;
                        }
                        else if ( (true) ) {
                            alt14=4;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 14, 2, input);

                            throw nvae;

                        }
                        }
                        break;
                    case TYPE_NAME:
                        {
                        int LA14_3 = input.LA(2);

                        if ( (( (n!=null?n.getText():null).equals("DECLARATION") )) ) {
                            alt14=1;
                        }
                        else if ( (( (n!=null?n.getText():null).equals("TYPED_ARGUMENT") )) ) {
                            alt14=2;
                        }
                        else if ( (( (n!=null?n.getText():null).equals("PARAMETER") )) ) {
                            alt14=3;
                        }
                        else if ( (true) ) {
                            alt14=4;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 14, 3, input);

                            throw nvae;

                        }
                        }
                        break;
                    case 20:
                        {
                        int LA14_4 = input.LA(2);

                        if ( (( (n!=null?n.getText():null).equals("DECLARATION") )) ) {
                            alt14=1;
                        }
                        else if ( (( (n!=null?n.getText():null).equals("TYPED_ARGUMENT") )) ) {
                            alt14=2;
                        }
                        else if ( (( (n!=null?n.getText():null).equals("PARAMETER") )) ) {
                            alt14=3;
                        }
                        else if ( (true) ) {
                            alt14=4;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 14, 4, input);

                            throw nvae;

                        }
                        }
                        break;
                    case 21:
                        {
                        int LA14_5 = input.LA(2);
